Fixed spelling error in help screen and added white shadow to title to make it more visible

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html, body {
 h1 {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: black;
+  text-shadow: 5px 5px 5px white;
   -webkit-text-stroke: 1px white;
 }
 
