--- a/src/components/MainBlock/MainBlock.css
+++ b/src/components/MainBlock/MainBlock.css
@@ -52,6 +52,7 @@
     background: white;
     outline: 1px solid black;
     border-radius: 20px;
+    padding: 15px;
 
     display: flex;
     flex-direction: column;
